[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/BackgroundSound.gd" type="Script" id=1]
[ext_resource path="res://Graphic/Menu/Assety_-41.png" type="Texture" id=2]
[ext_resource path="res://Graphic/Menu/Assety_-42.png" type="Texture" id=3]
[ext_resource path="res://Sound/music_1_menu.wav" type="AudioStream" id=4]

[node name="BackgroundSound" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Audio Bus", "Collision", "Pickable", "Transform", "Visibility" ]

[node name="bgm_button" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 1
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="BGM" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "BGM"

[connection signal="pressed" from="bgm_button" to="." method="_on_bgm_button_pressed"]


